--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    
-    <title>React App</title>
+    <script src="https://use.fontawesome.com/54b9817b2a.js"></script>
+    <link rel="stylesheet" href="/fonts/fontawesome-free-5.3.1-web/css/all.css">
+    <link rel="stylesheet" href="/fonts/fontawesome-free-5.3.1-web/css/fontawesome.css"> 
+    <title>react-table assignment | Ieva Vyliaudaite</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
